Bug 32205 - [console] Add launch option to merge process output
Also make use of output merge option in external tool launch.

Change-Id: Ibc3cec8df076a4cea3f83e37fa2640115dd3f49b
Signed-off-by: Paul Pazderski <paul-eclipse@ppazderski.de>